[package]
name = "certbot-alfahosting"
version = "1.0.0"
authors = ["Lukas Wagner <appdev.lukaswagner@gmail.com>"]
edition = "2018"
build="cargo-scripts/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
native-tls = "0.2.3"
imap = "1.0.2"
regex = "1.3.1"
headless_chrome = "0.9.0"
acme-lib = "0.5.2"
toml = "0.5.5"
serde = "1.0.104"
